[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["bjgman12 <bjgman38@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.0"
black = "^20.8b1"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
